Fix interaction between content orientation and VR

VR Shell needs to set a landscape orientation as part of the contract
with GVR. Currently ScreenOrientationProvider also sets the activities'
orientation in some situations, such as fullscreen video playback.
This leads to conflicts where a fullscreen video starts playing in VR
and then the orientation is no-longer locked to landscape.

This fix is to disable any other code from setting orientation
preferences while in VR.  Unlocking orientation will update the orientation
that VR will restore to.

BUG=736942

Change-Id: I3c52c6c3c2673eec5f9bdf091e3e8da70198df3a